--- a/index.html
+++ b/index.html
@@ -10,14 +10,19 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" href="dist/css/main.min.css">
 </head>
-<body id="data-root" data-luminate-root data-fr-id="29300" data-api-key="ZedRa4uc" data-table-prefix="nmssdev" data-secure-domain="https://secure3.convio.net/nmssdev/site/">
+<body id="data-root" data-luminate-root data-fr-id="1070" data-api-key="wDB09SQODRpVIOvX" data-table-prefix="psdemo" data-domain="http://psdemo.convio.net/site/" data-secure-domain="https://secure2.convio.net/psdemo/site/">
   <div class="container" ng-controller="MainCtrl">
     <h1>Luminate Online AngularJS Component Library</h1>
-    <div progress-meter type="event"></div>
+    <div class="card">
+      <div class="card-body">
+        <h2 class="card-title">Progress Meters</h2>
+        <div progress-meter type="event"></div>
+      </div>
+    </div>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
   <script src="vendor/ui-bootstrap-tpls-3.0.3.min.js"></script>
-   <script src="vendor/angular-luminate-utils.min.js"></script>
+  <script src="vendor/angular-luminate-utils.min.js"></script>
   <script src="dist/js/main.js"></script>
 </body>
 </html>
