--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>Luminate Online AngularJS Component Library</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,700|Kalam:300,400,700">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
   <link rel="stylesheet" href="dist/css/main.min.css">
@@ -16,7 +15,7 @@
     <div class="card">
       <div class="card-body">
         <h2 class="card-title">Progress Meters</h2>
-        <div progress-meter type="event"></div>
+        <div progress-meter type="event" show-meter-percent="5"></div>
       </div>
     </div>
   </div>
