change index ref

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400i,600,700|Kalam:300,400,700">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css">
-  <link rel="stylesheet" href="dist/css/main.min.css">
+  <link rel="stylesheet" href="../dist/css/main.min.css">
 </head>
 <body id="data-root" data-luminate-root data-fr-id="1070" data-api-key="wDB09SQODRpVIOvX" data-table-prefix="psdemo" data-domain="http://psdemo.convio.net/site/" data-secure-domain="https://secure2.convio.net/psdemo/site/">
   <div class="container" ng-controller="MainCtrl">
@@ -71,11 +71,12 @@
     <code>
       &lt;div progress-meter type="individual" id="{{ctrl.consId}}"&gt;&lt;/div&gt;
     </code>
-    <div progress-meter type="individual" progress-data="{ amount: 500, goal: 1000 }"></div>
+    <div progress-meter type="individual" progress-data="{ amount: 50000, goal: 100000 }"></div>
+    <div progress-meter type="individual" id="1001491"></div>
   </div>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
-  <script src="vendor/ui-bootstrap-tpls-3.0.3.min.js"></script>
-  <script src="vendor/angular-luminate-utils.min.js"></script>
-  <script src="dist/js/main.js"></script>
+  <script src="../vendor/ui-bootstrap-tpls-3.0.3.min.js"></script>
+  <script src="../vendor/angular-luminate-utils.min.js"></script>
+  <script src="../dist/js/main.js"></script>
 </body>
 </html>
