--- a/src/html/directive/progressMeter.html
+++ b/src/html/directive/progressMeter.html
@@ -1,8 +1,8 @@
 <div ng-cloak class="lo-progress-meter lo-progress-meter--{{type}}" ng-if="!meter.hideMeter">
   <div class="row">
     <div class="col">
-      <div class="lo-progress-meter__meter">
-        <div class="lo-progress-meter__meter lo-progress-meter__meter--full" ng-style="{'width': meter.percent}"></div>
+      <div class="lo-progress-meter__meter progress">
+        <div class="lo-progress-meter__meter--full progress-bar progress-bar-animated" ng-style="{'width': meter.percent}"></div>
       </div>
     </div>
   </div>
