--- a/index.html
+++ b/index.html
@@ -110,7 +110,28 @@
             </code>
             <div progress-meter type="company" id="1013"></div>
             <hr />
+          </div>
+        </div>
+      </div>
 
+      <div class="card" id="participation-types">
+        <div class="card-body">
+          <h2>Participation Types</h2>
+          <p>Provide a list of active participation types for a TeamRaiser Event. Defaults to horizontal layout, but can specify vertical layout. Vertical layout used for registration and will make the particpation type selectable. If fee or minimum goal is greater than zero, will be included in an unordered list. participation type description will be inlcuded as last item in unordered list.</p>
+
+          <div class="documentation-example">
+            <h3>Examples</h3>
+            <p>List of Participation Types</p>
+            <code>
+              &lt;div participation-types&gt;&lt;/div&gt;
+            </code>
+            <div participation-types></div>
+            <hr />
+            <p>Vertical List of Participation Types</p>
+            <code>
+              &lt;div participation-types layout="vertical"&gt;&lt;/div&gt;
+            </code>
+            <div participation-types layout="vertical"></div>
           </div>
         </div>
       </div>
