--- a/index.html
+++ b/index.html
@@ -228,12 +228,11 @@
     </div>
   </div>
   <script>
-    var luminateInstance = {
+    var luminateProperties = {
       nonSecure: 'http://psdemo.convio.net/site/',
       secure: 'https://secure2.convio.net/psdemo/site/',
       apiKey: 'wDB09SQODRpVIOvX'
     }
-
   </script>
   <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.6.10/angular.min.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
